# alphaclock

./: .gitignore  .gitmodules  numbers.txt
cad/: b-base.py  b-hour.py  b-min.py  b-mount-6701.py  b-mount-bottom.py  b-mount-middle.py  b-mount-top.py  b-mount.py  b-sec-angle.py  b-spacer-angle.py  b-spacer.py  base.py  coupler.py  cover.py  defs.py  dlc32mount.py  gears-hour.py  gears-min.py  gears-sec.py  hour.py  min-adapter.py  min.py  minspacer.py  minstepperholder.py  mount.py  mount2.py  pcbmount.py  pulley-hour.py  pulley-min.py  pulley-motor.py  pulley-sec.py  ring.py  sec.py  secspacer.py  secstepperholder.py  sensorpcbholder.py  spacer-angle.py  spacer.py  stepperadapter.py  stepperholder-fixed-19.py  (+11 more)
esp32/: CMakeLists.txt  sdkconfig
esp32/components/ssd1306/esp-idf-ssd1306/components/ssd1306/: CMakeLists.txt  ssd1306.h
esp32/main/: CMakeLists.txt  alphaclock.cpp  connect.cpp  connect.h  console.cpp  defs.h  display.cpp  display.h  hand.cpp  hand.h  hw.cpp  hw.h  nvs.cpp  nvs.h  sntp.cpp  stepper.cpp  stepper.h  websocket.cpp  websocket.h
frontend/: index.html  index.js
pcb/: alphaclock.kicad_pcb  alphaclock.kicad_prl  alphaclock.kicad_pro  alphaclock.kicad_sch  alphaclock.sch  fp-lib-table  sym-lib-table
pcb/sensorinterface/: fp-lib-table  sensorinterface.kicad_pcb  sensorinterface.kicad_prl  sensorinterface.kicad_pro  sensorinterface.kicad_sch  sym-lib-table
pcb/sensorinterface/symbols/: Comparator.kicad_sym  LED.kicad_sym  power.kicad_sym
pcb/stepperdriver/: alphaclock.kicad_sch  fp-info-cache
